[package]
name = "serieviausb"
version = "0.1.1"
edition = "2021"
authors = ["Marc-Antoine Manningham", "Charles Khouzry"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
rusb = "0.9"
anyhow = "1.0.81"
clap = { version = "4.5", features = ["derive"] }
derive_more = "0.99.17"
ctrlc = "3.4"
indicatif = "0.17"
color-print = "0.3"
